--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "dependencies": {
     "filehound": "^1.17.0",
-    "marked": "^0.6.2"
+    "markdown-link-extractor": "^1.2.1",
+    "marked": "^0.6.2",
+    "path": "^0.12.7",
+    "require-path": "^0.3.0"
   }
 }
