--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "fetch": "^1.1.0",
     "filehound": "^1.17.0",
+    "jest": "^24.8.0",
     "markdown-link-extractor": "^1.2.1",
     "marked": "^0.6.2",
     "node-fetch": "^2.6.0",
