--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "md-links",
   "version": "0.1.0",
   "dependencies": {
+    "eslint": "^6.0.1",
+    "eslint-plugin-jest": "^22.7.1",
     "fetch": "^1.1.0",
     "filehound": "^1.17.0",
     "jest": "^24.8.0",
@@ -10,9 +12,14 @@
     "node-fetch": "^2.6.0",
     "path": "^0.12.7",
     "require-path": "^0.3.0",
+    "test": "^0.6.0",
     "url-exists": "^1.0.3"
   },
   "bin": {
     "md-link": "index.js"
+  },
+  "scripts": {
+    "test": "jest --coverage"
   }
-}
+  }
+
