--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   },
   "scripts": {
     "test": "jest --coverage"
+  },
+  "devDependencies": {
+    "@babel/preset-env": "^7.4.5"
   }
-  }
-
+}
