--- a/package.json
+++ b/package.json
@@ -6,20 +6,24 @@
     "eslint-plugin-jest": "^22.7.1",
     "fetch": "^1.1.0",
     "filehound": "^1.17.0",
+    "gh-pages": "^2.0.1",
     "jest": "^24.8.0",
+    "knex": "^ 0.15.2",
     "markdown-link-extractor": "^1.2.1",
     "marked": "^0.6.2",
     "node-fetch": "^2.6.0",
     "path": "^0.12.7",
     "require-path": "^0.3.0",
     "test": "^0.6.0",
-    "url-exists": "^1.0.3"
+    "url-exists": "^1.0.3",
+    "prepublish" :"npm run test"
   },
   "bin": {
     "md-link": "index.js"
   },
   "scripts": {
-    "test": "jest --coverage"
+    "test": "jest --coverage",
+   "deploy": "gh-pages -d build"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.4.5"
