--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "dependencies": {
     "chalk": "^2.4.2",
+    "cli-color": "^1.4.0",
     "eslint": "^6.0.1",
     "eslint-plugin-jest": "^22.7.1",
     "fetch": "^1.1.0",
