--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "md-links",
   "version": "0.1.0",
   "dependencies": {
+    "babel": "^6.23.0",
     "chalk": "^2.4.2",
     "cli-color": "^1.4.0",
     "eslint": "^6.0.1",
